# discord-rpc

./: README.md  c.bat
src/: index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: console.rs  main.rs
